src/pages/StartingWizard/StartingWizard.module.css
.wizardContainer {
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: center;
}

.header {
  font-size: 2rem;
  margin-bottom: 2rem;
}

.btnContainer {
  display: flex;
  gap: 2rem;
}

.stepNumbers {
  display: flex;
  gap: 2rem;
  position: relative;
  width: 20rem;
  margin-bottom: 5rem;
}

.stepNumbers::after {
  content: "";
  height: 1px;
  width: 12rem;
  background-color: var(--brand-color-1);
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

.stepNumbers div {
  z-index: 100;
  background-color: var(--app-background-color);
  border: 2px solid var(--brand-color-1);
  font-size: 2rem;
  height: 3rem;
  width: 3rem;
  text-align: center;
  border-radius: 50%;
}

.stepNumbers div.active {
  background-color: var(--brand-color-1);
}

.inputContainer {
  display: flex;
  flex-direction: column;
  gap: 8px;
  margin-bottom: 1rem;
}

form {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

form input,
select {
  font-size: 1.6rem;
  padding: 1rem 1.2rem;
  border-radius: 4px;
  background-color: rgba(255, 255, 255, 0.8);
  border: 1px solid var(--brand-color-1);
  width: 100%;
}

.next,
.back {
  padding: 1rem 4rem;
  margin-left: auto;
  margin-top: 3rem;
  font-size: 1.5rem;
  font-weight: 600;
  background-color: var(--brand-color-1);
  text-align: center;
  color: #fff;
  border-radius: 5px;
  text-transform: capitalize;
}

.back {
  background-color: var(--brand-color-2);
}

.fileLabel {
  font-size: 1.5rem;
}

.imageLabel {
  align-self: flex-start;
  background-color: var(--brand-color-2);
  padding: 1rem 2rem;
  border-radius: 5px;
  font-weight: 600;
  font-size: 1.3rem;
}

